# ktp-approver

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  ktp-approver.desktop  version.h.in
po/ar/: kded_ktp_approver.po
po/bs/: kded_ktp_approver.po
po/ca/: kded_ktp_approver.po
po/ca@valencia/: kded_ktp_approver.po
po/cs/: kded_ktp_approver.po
po/da/: kded_ktp_approver.po
po/de/: kded_ktp_approver.po
po/el/: kded_ktp_approver.po
po/en_GB/: kded_ktp_approver.po
po/es/: kded_ktp_approver.po
po/et/: kded_ktp_approver.po
po/eu/: kded_ktp_approver.po
po/fi/: kded_ktp_approver.po
po/fr/: kded_ktp_approver.po
po/ga/: kded_ktp_approver.po
po/gl/: kded_ktp_approver.po
po/hi/: kded_ktp_approver.po
po/hu/: kded_ktp_approver.po
po/ia/: kded_ktp_approver.po
po/it/: kded_ktp_approver.po
po/ja/: kded_ktp_approver.po
po/ka/: kded_ktp_approver.po
po/kk/: kded_ktp_approver.po
po/km/: kded_ktp_approver.po
po/ko/: kded_ktp_approver.po
po/lt/: kded_ktp_approver.po
po/mr/: kded_ktp_approver.po
po/nb/: kded_ktp_approver.po
po/nds/: kded_ktp_approver.po
po/nl/: kded_ktp_approver.po
po/nn/: kded_ktp_approver.po
po/pa/: kded_ktp_approver.po
po/pl/: kded_ktp_approver.po
po/pt/: kded_ktp_approver.po
po/pt_BR/: kded_ktp_approver.po
po/ro/: kded_ktp_approver.po
po/ru/: kded_ktp_approver.po
po/sk/: kded_ktp_approver.po
po/sl/: kded_ktp_approver.po
po/sr/: kded_ktp_approver.po
po/sr@ijekavian/: kded_ktp_approver.po
po/sr@ijekavianlatin/: kded_ktp_approver.po
po/sr@latin/: kded_ktp_approver.po
po/sv/: kded_ktp_approver.po
po/tr/: kded_ktp_approver.po
po/ug/: kded_ktp_approver.po
po/uk/: kded_ktp_approver.po
po/zh_CN/: kded_ktp_approver.po
po/zh_TW/: kded_ktp_approver.po
src/: CMakeLists.txt  Messages.sh  approverdaemon.cpp  approverdaemon.h  channelapprover.cpp  channelapprover.h  dispatchoperation.cpp  dispatchoperation.h  filetransferchannelapprover.cpp  filetransferchannelapprover.h  handlewithcaller.cpp  handlewithcaller.h  ktp_approver.desktop  ktp_approver_debug.cpp  ktp_approver_debug.h  ktp_approverrc  ktpapproverfactory.h  ktpapprovermodule.cpp  org.freedesktop.Telepathy.Client.KDE.Approver.service  org.freedesktop.Telepathy.Client.KDE.Approver.service.in  org.freedesktop.Telepathy.Client.KTp.Approver.service.in  streamtubechannelapprover.cpp  streamtubechannelapprover.h  telepathy_kde_approver.desktop  telepathy_kde_approver.notifyrc  telepathy_kde_approverrc  textchannelapprover.cpp  textchannelapprover.h  tpkdeapproverfactory.h  tpkdeapprovermodule.cpp  tubechannelapprover.cpp  tubechannelapprover.h
